[package]
name = "shifting_chamber"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = ["dep:bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy-inspector-egui = { version = "0.15", optional = true }
console_error_panic_hook = "0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"